[package]
name = "links"
version = "0.1.0"
edition = "2021"
description = "find links from html and javascript 🧬"
repository = "https://github.com/redcloudvg/links"
documentation = "https://docs.rs/links"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
links_html = { version = "0.1.0", path = "links_html" }
links_js = { version = "0.1.0", path = "links_js" }

[workspace]
members = ["links_html", "links_js"]
resolver = "2"
